plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.0.145'
}

version = mod_version
group = "com.hexagram2021.${mod_id}"

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

minecraft.accessTransformers.file rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')

runs {
    configureEach {
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'debug'

        modSource project.sourceSets.main
    }

    client {
        workingDirectory project.file('run/client')
        systemProperty 'forge.enabledGameTestNamespaces', mod_id
    }

    server {
        workingDirectory project.file('run/server')
        systemProperty 'forge.enabledGameTestNamespaces', mod_id
    }

    gameTestServer {
        workingDirectory project.file('run/testServer')
        systemProperty 'forge.enabledGameTestNamespaces', mod_id
    }

    data {
        workingDirectory project.file('run/data')

        programArguments.addAll '--mod', mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        url "https://cursemaven.com"
    }
    maven {
        name 'tterrag maven'
        url 'https://maven.tterrag.com'
    }
    maven {
        name = 'Blamejared Maven'
        url = 'https://maven.blamejared.com/'
    }
    maven {
        name = 'theillusivec4\'s Maven'
        url = 'https://maven.theillusivec4.top/'
    }
    maven {
        name 'DVS1 Maven FS'
        url 'https://dvs1.progwml6.com/files/maven'
    }
    maven {
        name 'DevOS'
        url 'https://mvn.devos.one/snapshots/'
    }
    maven {
        name 'Create Mod Maven'
        url 'https://maven.createmod.net/'
    }
    maven {
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    maven {
        name = 'GeckoLib'
        url = 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
    }
    maven {
        name = "Florensie's Maven"
        url = "https://maven.florens.be/releases"
    }
    maven {
        name = "ParchmentMC"
        url = "https://maven.parchmentmc.org/"
    }
}

dependencies {
    implementation "net.neoforged:neoforge:${neo_version}"

    implementation ("mezz.jei:jei-1.21.1-neoforge:19.27.0.340")
    implementation ("be.florens:expandability-neoforge:12.0.0")
    compileOnly ("com.tterrag.registrate:Registrate:MC1.21-1.3.0+67")
    implementation ('software.bernie.geckolib:geckolib-forge-1.21.1:4.8.3')
    implementation ("top.theillusivec4.curios:curios-neoforge:9.5.1+1.21.1")
    runtimeOnly ("net.darkhax.bookshelf:bookshelf-neoforge-1.21.1:21.1.81")
    runtimeOnly ("dev.engine-room.flywheel:flywheel-neoforge-1.21.1:1.0.6")

    //implementation ("curse.maven:astages-1120180:6892933")            ////// todo: it's not open-sourced
    implementation ('curse.maven:atlaslib-463826:5449009')              //////
    //runtimeOnly ("curse.maven:biomancy-492939:4496477")       // todo: no 1.21.1
    implementation ("curse.maven:create-328085:7408951")                //////
    implementation ("curse.maven:createaddition-439890:7518252")        //////
    runtimeOnly ("curse.maven:createdeco-509285:7314692")
    implementation ("curse.maven:easydiet-1419902:7463630")             //////
    compileOnly ("curse.maven:embeddium-908741:6118392")
    compileOnly ("curse.maven:embeddiumplus-931925:7378108")
    //implementation ("curse.maven:hunger_reworked-847923:6358923")     ////// todo: port it
    implementation ("curse.maven:hordes-485779:6772331")                //////
    implementation ("curse.maven:jade-324717:7545219")                  //////
    compileOnly ("curse.maven:kubejs-238086:7278501")
    runtimeOnly ("curse.maven:spark-361579:7315224")
    //implementation ("curse.maven:tacz-1028108:6069322-sources-6069332")           ////// replaced by superb-warfare
    implementation ("curse.maven:superb-warfare-1218165:7292699-sources-7292701")   //////
    implementation ("curse.maven:tetrachordlib-980149:5644644")         //////
    implementation ("curse.maven:travelersbackpack-321117:7543685")     //////
    //implementation ("curse.maven:justlevelingfork-1073400:5677674")   ////// todo: no 1.21.1
    runtimeOnly ("curse.maven:zombie_extreme-392809:7014504")
    //implementation ("curse.maven:sona-survival-101-1023345:5828134")  // todo: no 1.21.1
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}